more css for some lingering alignment issues

--- a/styles/global.css
+++ b/styles/global.css
@@ -89,3 +89,7 @@ h2 {
 .sim-button {
     background-color: aquamarine;
 }
+
+.onetime-click {
+    margin-top: 50px;
+}
